@@ -337,7 +337,7 @@ void R_AnimateLight(void);
 int R_LightPoint (vec3_t p);
 float R_LightPointColor (vec3_t p);
 void GL_BuildLightmaps (void);
-void GL_SetupLightmapFmt (qboolean check_cmdline);
+void GL_SetupLightmapFmt (void);
 void GL_MakeAliasModelDisplayLists (qmodel_t *m, aliashdr_t *hdr);
 
 void R_InitParticleTexture (void);
